# backend/src/main/java/ru/baikalsr/backend/Exchange/dto/BatteryInformationDTO.java
@@ -1,4 +1,9 @@
 package ru.baikalsr.backend.Exchange.dto;
 
-public record BatteryInformationDTO() {
+public record BatteryInformationDTO(
+    Boolean isCharging,
+    Byte percent,
+    Float voltage,
+    Float temperature
+) {
 }
