# backend/src/main/java/ru/baikalsr/backend/Exchange/state/handler/BatteryInformationHandler.java
@@ -6,6 +6,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 import ru.baikalsr.backend.Device.entity.DeviceState;
 import ru.baikalsr.backend.Device.repository.DeviceStateRepository;
+import ru.baikalsr.backend.Exchange.dto.BatteryInformationDTO;
 import ru.baikalsr.backend.Exchange.dto.StateKey;
 import ru.baikalsr.backend.Exchange.state.StateHandler;
 
@@ -14,20 +15,23 @@ import java.util.UUID;
 @Component
 @RequiredArgsConstructor
 @Slf4j
-class BatteryPercentHandler implements StateHandler<Byte> {
+class BatteryInformationHandler implements StateHandler<BatteryInformationDTO> {
     private final DeviceStateRepository repo; // JPA/DAO куда пишем
     public StateKey key() { return StateKey.BATTERY_INFORMATION; }
-    public Class<Byte> type() { return Byte.class; }
+    public Class<BatteryInformationDTO> type() { return BatteryInformationDTO.class; }
 
     @Transactional
-    public void apply(String deviceId, Byte value, long at) {
-        if (value < 0 || value > 100) {
-            log.warn("Battery percent value out of range {} - [{}, {}]", value, 0, 100);
+    public void apply(String deviceId, BatteryInformationDTO dto, long at) {
+        if (dto.percent() < 0 || dto.percent() > 100) {
+            log.warn("Battery percent value out of range {} - [{}, {}]", dto.percent(), 0, 100);
         } else {
             DeviceState deviceState = repo.findByDevice_Id(UUID.fromString(deviceId))
                     .orElse(new DeviceState());
 
-            deviceState.setBatteryLevel(value);
+            deviceState.setCharging(dto.isCharging());
+            deviceState.setBatteryLevel(dto.percent());
+            deviceState.setBatteryVoltage(dto.voltage());
+            deviceState.setBatteryTemperature(dto.temperature());
             repo.save(deviceState);
         }
     }
